# RL4Echo

./: .env.example  .gitmodules  ActorCritic.py  Actors.py  ES_ED_datamodule.py  PPO.py  PPOLightning.py  PolicyGradient.py  PolicyGradientLightning.py  README.md  RLDataset.py  RLmodule.py  RLrunner.py  Reward.py  SectorDataModule.py  SimplePG.py  SimplePPO.py  ablation.sh  agent.py  auto_iteration.py  dataset_pathologies.ipynb  eval.py  experiment.py  normalise_images.py  patho_aj_viz.py  pyproject.toml  replaybuffer.py  reward_scaling.py  run_ensemble.sh  run_fusion_ablation.sh  run_hp_ablation.sh  run_mcdropout.sh  run_supervised_ablation_temporal_window.sh  run_tempo_ablation.sh  runner.py  simpledatamodule.py  uncertainty_reward.py
actors/: ActorCritic.py  ActorCritic_Unet.py  Actors.py
archive/: SimplePG.py  SimplePPO.py  agent.py
config/: RL_runner.yaml  auto_iteration.yaml  experiment.yaml  reward_runner.yaml  runner.yaml  supervised_runner.yaml  ts-it_runner.yaml  uncertainty_runner.yaml
config/actor/: ac.yaml  ac_unet.yaml  default_actor.yaml  pg_actor.yaml
config/callbacks/: default.yaml  model_checkpoint.yaml
config/corrector/: ae.yaml
config/datamodule/: camus.yaml  es_ed.yaml  rewardnet_diff.yaml  sector.yaml
config/experiment/: ppo_camus.yaml  ppo_es_ed.yaml  ppo_sector.yaml  supervised_camus.yaml  supervised_es_ed.yaml  supervised_sector.yaml  ts_it.yaml
config/launcher/: alliancecan.yaml
config/logger/: tensorboard.yaml
config/model/: RLModule.yaml  aleatoric.yaml  ensemble.yaml  mcdropout.yaml  pg.yaml  ppo.yaml  rewardnet.yaml  seg.yaml  ssn.yaml  supervised.yaml  ts-it.yaml  tta.yaml
config/reward/: accuracy.yaml  accuracy_map.yaml  morphological.yaml  rewardunet.yaml
datamodules/: ES_ED_datamodule.py  camus.py  camus_RL_datamodule.py
hydra_plugins/: README.md
rewardnet/: data_augmentation.py  reward_net.py  reward_net_datamodule.py  reward_net_main.py  reward_unet.py  reward_unet_datamodule.py  unet_heads.py
rl4echo/: PPO.py  PPO_3d.py  PolicyGradient.py  RLmodule.py  RLmodule_3D.py  Reward.py  Visualize_LM.py  auto_iteration.py  auto_iteration_CC.py  cotracker_predict.py  eval.py  inference_from_seq.py  inference_from_seq_batch.py  inference_from_seq_h5.py  inference_from_seq_reward.py  predict_3d.py  runner.py  simple_viewer.py  uncertainty_reward.py
scripts/: camus_get_split.py  eval_from_nifti.py  figure_generation.py  figure_uncertainty_show_SOTA.py  fix_icardio.py  normalise_images.py  splits_from_qc.py
supervised/: datamodule.py  supervised.py  supervised_main.py  supervised_optimizer.py  supervised_runner.py  ts-it_optimizer.py
uncertainty/: aleatoric.py  ensemble.py  mcdropout.py  ssn.py  uncertainty.py  unet.py
utils/: Metrics.py  correctors.py  file_utils.py  logging_helper.py  test_metrics.py
(+195 files in other folders)
